buildscript {
    repositories {
        gradlePluginPortal()
    }
    dependencies {
        classpath 'io.jmix.gradle:jmix-gradle-plugin:2.8.1'
        classpath "io.spring.gradle:dependency-management-plugin:1.1.7"
    }
}

group = 'com.vn'
// Plan 08-07: version sourced from gradle.properties so CI can override via -Pversion=...
// without editing build files. Default falls back to 1.0.0 if the property is unset.
version = project.findProperty('version') ?: '1.0.0'

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'io.jmix'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
        maven {
            url = 'https://global.repo.jmix.io/repository/public'
        }
        maven { url = 'https://repo.spring.io/milestone' }
        maven { url = 'https://repo.spring.io/snapshot' }
    }

    jmix {
        bomVersion = '2.8.1'
        projectId = 'AI'
    }

    ext {
        set('springAiVersion', "1.1.4")
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
        }
    }

    group = this.group
    version = this.version

    def props = new Properties()
    buildFile.withInputStream { props.load(it) }
    def subArchivesBaseName = props.getProperty('archivesBaseName')
    def archName = subArchivesBaseName.substring(1, subArchivesBaseName.length() - 1)

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
        withSourcesJar()
    }

    artifacts {
        archives sourcesJar
    }

    publishing {
        repositories {
            maven {
                name = 'CustomNexus'
                // [W-03 GATING] — snapshot-vs-release URL conditional. The
                // jmix-internal-snapshots repo only accepts -SNAPSHOT versions; uploading
                // 1.0.0 against it is rejected. Switch to a release-class repo for non-
                // snapshot versions. Configure both URLs via -PnexusReleaseUrl /
                // -PnexusSnapshotUrl in CI; defaults below mirror current snapshot
                // convention so dev publishToMavenLocal (which uses neither) is unaffected.
                def nexusSnapshotUrl = project.findProperty('nexusSnapshotUrl')
                        ?: 'https://nexus.x2h.com.vn/repository/jmix-internal-snapshots/'
                def nexusReleaseUrl = project.findProperty('nexusReleaseUrl')
                        ?: 'https://nexus.x2h.com.vn/repository/jmix-internal-releases/'
                def targetUrl = version.toString().endsWith('-SNAPSHOT') ? nexusSnapshotUrl : nexusReleaseUrl
                // WR-005: refuse to publish credentials over plain HTTP. The default URLs
                // are HTTPS, so the previous `allowInsecureProtocol = true` only weakened
                // the release path for an overridden Nexus URL — and silently allowed an
                // override to leak nexusUsername / nexusPassword over the wire. Fail fast
                // if any override drops the protocol below HTTPS.
                if (!targetUrl.toString().startsWith('https://')) {
                    throw new GradleException(
                            "Nexus publish URL must use HTTPS to protect credentials in transit: ${targetUrl}")
                }
                url = targetUrl
                credentials {
                    username = project.findProperty('nexusUsername')
                    password = project.findProperty('nexusPassword')
                }
            }
        }
        publications {
            javaMaven(MavenPublication) {
                artifactId = archName
                from components.java
            }
        }
    }

    // remove after https://youtrack.jetbrains.com/issue/IDEA-227215 is fixed
    tasks.withType(GenerateModuleMetadata) {
        enabled = false
    }

    project.tasks.withType(JavaCompile).configureEach {
        options.compilerArgs.add("-parameters")
        options.release = 21
    }
}
